# creativ_practise

./: README.md
aboutMakefile/: README.md
cProgram/SysOb/: Makefile  README.md
cProgram/SysOb/config/: config.json
cProgram/SysOb/src/: Makefile
cProgram/SysOb/src/cJSON/: Makefile
cProgram/SysOb/src/model/: Makefile  SysOb  SysOb.c  SysOb.h  func.c
cProgram/makeTemplate/: env.make  rules.make
cProgram/maketest/: Makefile
cmakeTest/cmakeCprogram/: CMakeLists.txt  README.md
cmakeTest/cmakeCprogram/dynamicA/: CMakeLists.txt  dynamicA.cpp  dynamicA.h
cmakeTest/cmakeCprogram/dynamicC/: CMakeLists.txt  dynamicC.cpp  dynamicC.h
cmakeTest/cmakeCprogram/dynamicD/: CMakeLists.txt  dynamicD.cpp  dynamicD.h
cmakeTest/cmakeCprogram/main/: CMakeLists.txt  main.cpp  main.h
cmakeTest/cmakeCprogram/staticB/: CMakeLists.txt  staticB.cpp  staticB.h
